fix:map - db restore

--- a/.env.prod
+++ b/.env.prod
@@ -12,7 +12,8 @@ APP_GLOBAL_PREFIX=api
 
 POSTGRES_DB=mahan_file
 POSTGRES_USER=mahan_admin
-POSTGRES_PORT=6301
+POSTGRES_INTERNAL_PORT=5432
+POSTGRES_PUBLISHED_PORT=6301
 
 REDIS_HOST=redis
 REDIS_PORT=6302
@@ -55,6 +56,8 @@ PRISMA_LOG_QUERIES=false
 NEXT_UI_PORT=6306
 NEXT_PUBLIC_APP_URL=https://mahanmelk.com
 NEXT_PUBLIC_API_BASE_URL=https://mahanmelk.com/api
+# Serve tiles via same-origin /map to avoid CORS
+NEXT_PUBLIC_MAP_TILE_BASE_URL=/map
 NEXT_PUBLIC_VAPID_PUBLIC_KEY=BJPGr5VE7KBZI1r6zo6kQM8LF9MllmtfnyI65mrH9MZ-MmRVvDr-dpgp0T4L7ornd-Trwb2VSi6MQgjrmHI0o2Q
 
 NOTIFICATION_WINDOW_MINUTES=10
@@ -75,6 +78,7 @@ UI_IMAGE_TAG=latest
 API_REPLICAS=2
 UI_REPLICAS=2
 API_CRON_REPLICAS=1
+MAP_TILES_PORT=7235
 
 # =======================================
 # Secrets (store in GitHub Actions secrets)
@@ -83,7 +87,7 @@ API_CRON_REPLICAS=1
 GHCR_TOKEN=ghp_examplepatwithreadpackagescope
 
 POSTGRES_PASSWORD=zQ5gG7k3S9nK2bFw
-DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:${POSTGRES_INTERNAL_PORT}/${POSTGRES_DB}?schema=public
 DATABASE_DIRECT_URL=${DATABASE_URL}
 
 REDIS_PASSWORD= # (only if protected Redis; keep blank otherwise)
