--- a/ui/package.json
+++ b/ui/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.1",
+    "maplibre-gl": "^4.7.1",
     "lucide-react": "^0.435.0",
     "next": "^16.0.1",
     "next-intl": "^3.17.1",
