--- a/.env.prod
+++ b/.env.prod
@@ -107,3 +107,4 @@ OTP_SENDER_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.otp.mahanfile.token
 NEXT_PUBLIC_ANALYTICS_WRITE_KEY=mahanfile-analytics-key-2025
 
 OTEL_EXPORTER_OTLP_HEADERS= # add when tracing vendor requires authentication
+TELEGRAM_BOT_TOKEN=8564124652:AAFgKx_GRMso0OR3DVdL_l5Nf24xPIdyvFI
