--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -303,8 +303,9 @@ jobs:
           JWT_ACCESS_TOKEN_SECRET: ${{ secrets.JWT_ACCESS_TOKEN_SECRET }}
           JWT_REFRESH_TOKEN_SECRET: ${{ secrets.JWT_REFRESH_TOKEN_SECRET }}
           RABBITMQ_PASSWORD: ${{ secrets.RABBITMQ_PASSWORD }}
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
         run: |
-          required_vars=(STACK_NAME GHCR_TOKEN POSTGRES_PASSWORD MINIO_ACCESS_KEY MINIO_SECRET_KEY JWT_ACCESS_TOKEN_SECRET JWT_REFRESH_TOKEN_SECRET RABBITMQ_PASSWORD)
+          required_vars=(STACK_NAME GHCR_TOKEN POSTGRES_PASSWORD MINIO_ACCESS_KEY MINIO_SECRET_KEY JWT_ACCESS_TOKEN_SECRET JWT_REFRESH_TOKEN_SECRET RABBITMQ_PASSWORD TELEGRAM_BOT_TOKEN)
           missing=0
           for name in "${required_vars[@]}"; do
             if [ -z "${!name}" ]; then
@@ -343,6 +344,7 @@ jobs:
           JWT_ACCESS_TOKEN_SECRET: ${{ secrets.JWT_ACCESS_TOKEN_SECRET }}
           JWT_REFRESH_TOKEN_SECRET: ${{ secrets.JWT_REFRESH_TOKEN_SECRET }}
           RABBITMQ_PASSWORD: ${{ secrets.RABBITMQ_PASSWORD }}
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           DATABASE_DIRECT_URL: ${{ secrets.DATABASE_DIRECT_URL }}
           OTP_SENDER_API_KEY: ${{ secrets.OTP_SENDER_API_KEY }}
