--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,9 @@ jobs:
 
   server-test:
     runs-on: ubuntu-latest
-    needs: server-typecheck
+    needs:
+      - server-lint
+      - server-typecheck
     services:
       postgres:
         image: postgres:16-alpine
@@ -173,7 +175,9 @@ jobs:
 
   ui-test:
     runs-on: ubuntu-latest
-    needs: ui-typecheck
+    needs:
+      - ui-lint
+      - ui-typecheck
     env:
       NEXT_UI_PORT: 6005
     defaults:
