--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -17,13 +17,13 @@ services:
   postgres:
     image: postgres:16-alpine
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-my_ads}
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD not set}
-      PGPORT: ${POSTGRES_INTERNAL_PORT:-5432}
+      PGPORT: ${POSTGRES_INTERNAL_PORT}
     ports:
-      - target: ${POSTGRES_INTERNAL_PORT:-5432}
-        published: ${POSTGRES_PUBLISHED_PORT:-6301}
+      - target: ${POSTGRES_INTERNAL_PORT}
+        published: ${POSTGRES_PUBLISHED_PORT}
         protocol: tcp
         mode: host
     volumes:
@@ -43,7 +43,7 @@ services:
       [
         "redis-server",
         "--port",
-        "${REDIS_PORT:-6379}"
+        "${REDIS_PORT}"
       ]
     networks:
       - app_net
@@ -54,8 +54,8 @@ services:
   rabbitmq:
     image: rabbitmq:3.13-management
     environment:
-      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USERNAME:-guest}
-      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD:-guest}
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USERNAME}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD}
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
     networks:
@@ -71,9 +71,9 @@ services:
         "server",
         "/data",
         "--console-address",
-        ":${MINIO_CONSOLE_PORT:-9001}",
+        ":${MINIO_CONSOLE_PORT}",
         "--address",
-        ":${MINIO_PORT:-9000}"
+        ":${MINIO_PORT}"
       ]
     environment:
       MINIO_ROOT_USER: ${MINIO_ACCESS_KEY:?MINIO_ACCESS_KEY not set}
@@ -81,12 +81,12 @@ services:
     volumes:
       - minio_data:/data
     ports:
-      - target: ${MINIO_PORT:-9000}
-        published: ${MINIO_PORT:-9000}
+      - target: ${MINIO_PORT}
+        published: ${MINIO_PORT}
         protocol: tcp
         mode: ingress
-      - target: ${MINIO_CONSOLE_PORT:-9001}
-        published: ${MINIO_CONSOLE_PORT:-9001}
+      - target: ${MINIO_CONSOLE_PORT}
+        published: ${MINIO_CONSOLE_PORT}
         protocol: tcp
         mode: ingress
     networks:
@@ -100,53 +100,53 @@ services:
     environment:
       NODE_ENV: production
       APP_HOST: 0.0.0.0
-      APP_PORT: ${APP_PORT:-6200}
-      APP_GLOBAL_PREFIX: ${APP_GLOBAL_PREFIX:-api}
-      DATABASE_URL: ${DATABASE_URL:-postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:${POSTGRES_INTERNAL_PORT:-5432}/${POSTGRES_DB:-my_ads}?schema=public}
-      DATABASE_DIRECT_URL: ${DATABASE_DIRECT_URL:-postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:${POSTGRES_INTERNAL_PORT:-5432}/${POSTGRES_DB:-my_ads}?schema=public}
-      REDIS_HOST: ${REDIS_HOST:-redis}
-      REDIS_PORT: ${REDIS_PORT:-6379}
-      REDIS_DB: ${REDIS_DB:-0}
-      REDIS_TLS: ${REDIS_TLS:-false}
-      REDIS_KEY_PREFIX: ${REDIS_KEY_PREFIX:-my-ads:}
+      APP_PORT: ${APP_PORT}
+      APP_GLOBAL_PREFIX: ${APP_GLOBAL_PREFIX}
+      DATABASE_URL: ${DATABASE_URL}
+      DATABASE_DIRECT_URL: ${DATABASE_DIRECT_URL}
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+      REDIS_DB: ${REDIS_DB}
+      REDIS_TLS: ${REDIS_TLS}
+      REDIS_KEY_PREFIX: ${REDIS_KEY_PREFIX}
       JWT_ACCESS_TOKEN_SECRET: ${JWT_ACCESS_TOKEN_SECRET:?JWT_ACCESS_TOKEN_SECRET not set}
       JWT_REFRESH_TOKEN_SECRET: ${JWT_REFRESH_TOKEN_SECRET:?JWT_REFRESH_TOKEN_SECRET not set}
-      JWT_ACCESS_TOKEN_TTL: ${JWT_ACCESS_TOKEN_TTL:-900s}
-      JWT_REFRESH_TOKEN_TTL: ${JWT_REFRESH_TOKEN_TTL:-7d}
-      CORS_ORIGIN: ${CORS_ORIGIN:-https://mahan.radiophp.observer}
-      RATE_LIMIT_TTL: ${RATE_LIMIT_TTL:-60}
-      RATE_LIMIT_MAX: ${RATE_LIMIT_MAX:-100}
-      OTP_TTL_SECONDS: ${OTP_TTL_SECONDS:-300}
-      OTP_DIGITS: ${OTP_DIGITS:-6}
-      OTP_SENDER_BASE_URL: ${OTP_SENDER_BASE_URL:-}
-      OTP_SENDER_API_KEY: ${OTP_SENDER_API_KEY:-}
-      RABBITMQ_URL: ${RABBITMQ_URL:-amqp://${RABBITMQ_USERNAME:-guest}:${RABBITMQ_PASSWORD:-guest}@rabbitmq:5672}
-      RABBITMQ_QUEUE_PREFIX: ${RABBITMQ_QUEUE_PREFIX:-my-ads}
-      RABBITMQ_PREFETCH: ${RABBITMQ_PREFETCH:-10}
-      RABBITMQ_HEARTBEAT: ${RABBITMQ_HEARTBEAT:-60}
-      RABBITMQ_RECONNECT_SECONDS: ${RABBITMQ_RECONNECT_SECONDS:-5}
-      MINIO_ENDPOINT: ${MINIO_ENDPOINT:-minio}
-      MINIO_PORT: ${MINIO_PORT:-9000}
-      MINIO_CONSOLE_PORT: ${MINIO_CONSOLE_PORT:-9001}
-      MINIO_USE_SSL: ${MINIO_USE_SSL:-false}
+      JWT_ACCESS_TOKEN_TTL: ${JWT_ACCESS_TOKEN_TTL}
+      JWT_REFRESH_TOKEN_TTL: ${JWT_REFRESH_TOKEN_TTL}
+      CORS_ORIGIN: ${CORS_ORIGIN}
+      RATE_LIMIT_TTL: ${RATE_LIMIT_TTL}
+      RATE_LIMIT_MAX: ${RATE_LIMIT_MAX}
+      OTP_TTL_SECONDS: ${OTP_TTL_SECONDS}
+      OTP_DIGITS: ${OTP_DIGITS}
+      OTP_SENDER_BASE_URL: ${OTP_SENDER_BASE_URL}
+      OTP_SENDER_API_KEY: ${OTP_SENDER_API_KEY}
+      RABBITMQ_URL: ${RABBITMQ_URL}
+      RABBITMQ_QUEUE_PREFIX: ${RABBITMQ_QUEUE_PREFIX}
+      RABBITMQ_PREFETCH: ${RABBITMQ_PREFETCH}
+      RABBITMQ_HEARTBEAT: ${RABBITMQ_HEARTBEAT}
+      RABBITMQ_RECONNECT_SECONDS: ${RABBITMQ_RECONNECT_SECONDS}
+      MINIO_ENDPOINT: ${MINIO_ENDPOINT}
+      MINIO_PORT: ${MINIO_PORT}
+      MINIO_CONSOLE_PORT: ${MINIO_CONSOLE_PORT}
+      MINIO_USE_SSL: ${MINIO_USE_SSL}
       MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY:?MINIO_ACCESS_KEY not set}
       MINIO_SECRET_KEY: ${MINIO_SECRET_KEY:?MINIO_SECRET_KEY not set}
-      MINIO_BUCKET: ${MINIO_BUCKET:-upload}
-      MINIO_REGION: ${MINIO_REGION:-us-east-1}
-      OTEL_ENABLED: ${OTEL_ENABLED:-false}
-      OTEL_SERVICE_NAME: ${OTEL_SERVICE_NAME:-my-ads-api}
-      OTEL_EXPORTER_OTLP_ENDPOINT: ${OTEL_EXPORTER_OTLP_ENDPOINT:-http://otel-collector:4318}
-      OTEL_EXPORTER_OTLP_HEADERS: ${OTEL_EXPORTER_OTLP_HEADERS:-}
-      OTEL_LOG_LEVEL: ${OTEL_LOG_LEVEL:-error}
-      LOG_LEVEL: ${LOG_LEVEL:-info}
-      LOG_PRETTY: ${LOG_PRETTY:-false}
-      PRISMA_LOG_QUERIES: ${PRISMA_LOG_QUERIES:-false}
-      NEXT_UI_PORT: ${NEXT_UI_PORT:-6005}
-      NEXT_PUBLIC_APP_URL: ${NEXT_PUBLIC_APP_URL:-https://mahan.radiophp.observer}
-      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:-https://mahan.radiophp.observer/api}
+      MINIO_BUCKET: ${MINIO_BUCKET}
+      MINIO_REGION: ${MINIO_REGION}
+      OTEL_ENABLED: ${OTEL_ENABLED}
+      OTEL_SERVICE_NAME: ${OTEL_SERVICE_NAME}
+      OTEL_EXPORTER_OTLP_ENDPOINT: ${OTEL_EXPORTER_OTLP_ENDPOINT}
+      OTEL_EXPORTER_OTLP_HEADERS: ${OTEL_EXPORTER_OTLP_HEADERS}
+      OTEL_LOG_LEVEL: ${OTEL_LOG_LEVEL}
+      LOG_LEVEL: ${LOG_LEVEL}
+      LOG_PRETTY: ${LOG_PRETTY}
+      PRISMA_LOG_QUERIES: ${PRISMA_LOG_QUERIES}
+      NEXT_UI_PORT: ${NEXT_UI_PORT}
+      NEXT_PUBLIC_APP_URL: ${NEXT_PUBLIC_APP_URL}
+      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL}
     ports:
-      - target: ${APP_PORT:-6200}
-        published: ${APP_PORT:-6200}
+      - target: ${APP_PORT}
+        published: ${APP_PORT}
         protocol: tcp
         mode: ingress
     networks:
@@ -158,7 +158,7 @@ services:
       - minio
     deploy:
       <<: *deploy_defaults
-      replicas: ${API_REPLICAS:-2}
+      replicas: ${API_REPLICAS}
       placement:
         constraints:
           - node.role == manager
@@ -174,50 +174,50 @@ services:
       NODE_ENV: production
       ENABLE_CRON_JOBS: 'true'
       APP_HOST: 0.0.0.0
-      APP_PORT: ${APP_PORT:-6300}
-      APP_GLOBAL_PREFIX: ${APP_GLOBAL_PREFIX:-api}
-      DATABASE_URL: ${DATABASE_URL:-postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:${POSTGRES_INTERNAL_PORT:-5432}/${POSTGRES_DB:-my_ads}?schema=public}
-      DATABASE_DIRECT_URL: ${DATABASE_DIRECT_URL:-postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:${POSTGRES_INTERNAL_PORT:-5432}/${POSTGRES_DB:-my_ads}?schema=public}
-      REDIS_HOST: ${REDIS_HOST:-redis}
-      REDIS_PORT: ${REDIS_PORT:-6379}
-      REDIS_DB: ${REDIS_DB:-0}
-      REDIS_TLS: ${REDIS_TLS:-false}
-      REDIS_KEY_PREFIX: ${REDIS_KEY_PREFIX:-my-ads:}
+      APP_PORT: ${APP_PORT}
+      APP_GLOBAL_PREFIX: ${APP_GLOBAL_PREFIX}
+      DATABASE_URL: ${DATABASE_URL}
+      DATABASE_DIRECT_URL: ${DATABASE_DIRECT_URL}
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+      REDIS_DB: ${REDIS_DB}
+      REDIS_TLS: ${REDIS_TLS}
+      REDIS_KEY_PREFIX: ${REDIS_KEY_PREFIX}
       JWT_ACCESS_TOKEN_SECRET: ${JWT_ACCESS_TOKEN_SECRET:?JWT_ACCESS_TOKEN_SECRET not set}
       JWT_REFRESH_TOKEN_SECRET: ${JWT_REFRESH_TOKEN_SECRET:?JWT_REFRESH_TOKEN_SECRET not set}
-      JWT_ACCESS_TOKEN_TTL: ${JWT_ACCESS_TOKEN_TTL:-900s}
-      JWT_REFRESH_TOKEN_TTL: ${JWT_REFRESH_TOKEN_TTL:-7d}
-      CORS_ORIGIN: ${CORS_ORIGIN:-https://mahan.radiophp.observer}
-      RATE_LIMIT_TTL: ${RATE_LIMIT_TTL:-60}
-      RATE_LIMIT_MAX: ${RATE_LIMIT_MAX:-100}
-      OTP_TTL_SECONDS: ${OTP_TTL_SECONDS:-300}
-      OTP_DIGITS: ${OTP_DIGITS:-6}
-      OTP_SENDER_BASE_URL: ${OTP_SENDER_BASE_URL:-}
-      OTP_SENDER_API_KEY: ${OTP_SENDER_API_KEY:-}
-      RABBITMQ_URL: ${RABBITMQ_URL:-amqp://${RABBITMQ_USERNAME:-guest}:${RABBITMQ_PASSWORD:-guest}@rabbitmq:5672}
-      RABBITMQ_QUEUE_PREFIX: ${RABBITMQ_QUEUE_PREFIX:-my-ads}
-      RABBITMQ_PREFETCH: ${RABBITMQ_PREFETCH:-10}
-      RABBITMQ_HEARTBEAT: ${RABBITMQ_HEARTBEAT:-60}
-      RABBITMQ_RECONNECT_SECONDS: ${RABBITMQ_RECONNECT_SECONDS:-5}
-      MINIO_ENDPOINT: ${MINIO_ENDPOINT:-minio}
-      MINIO_PORT: ${MINIO_PORT:-9000}
-      MINIO_CONSOLE_PORT: ${MINIO_CONSOLE_PORT:-9001}
-      MINIO_USE_SSL: ${MINIO_USE_SSL:-false}
+      JWT_ACCESS_TOKEN_TTL: ${JWT_ACCESS_TOKEN_TTL}
+      JWT_REFRESH_TOKEN_TTL: ${JWT_REFRESH_TOKEN_TTL}
+      CORS_ORIGIN: ${CORS_ORIGIN}
+      RATE_LIMIT_TTL: ${RATE_LIMIT_TTL}
+      RATE_LIMIT_MAX: ${RATE_LIMIT_MAX}
+      OTP_TTL_SECONDS: ${OTP_TTL_SECONDS}
+      OTP_DIGITS: ${OTP_DIGITS}
+      OTP_SENDER_BASE_URL: ${OTP_SENDER_BASE_URL}
+      OTP_SENDER_API_KEY: ${OTP_SENDER_API_KEY}
+      RABBITMQ_URL: ${RABBITMQ_URL}
+      RABBITMQ_QUEUE_PREFIX: ${RABBITMQ_QUEUE_PREFIX}
+      RABBITMQ_PREFETCH: ${RABBITMQ_PREFETCH}
+      RABBITMQ_HEARTBEAT: ${RABBITMQ_HEARTBEAT}
+      RABBITMQ_RECONNECT_SECONDS: ${RABBITMQ_RECONNECT_SECONDS}
+      MINIO_ENDPOINT: ${MINIO_ENDPOINT}
+      MINIO_PORT: ${MINIO_PORT}
+      MINIO_CONSOLE_PORT: ${MINIO_CONSOLE_PORT}
+      MINIO_USE_SSL: ${MINIO_USE_SSL}
       MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY:?MINIO_ACCESS_KEY not set}
       MINIO_SECRET_KEY: ${MINIO_SECRET_KEY:?MINIO_SECRET_KEY not set}
-      MINIO_BUCKET: ${MINIO_BUCKET:-upload}
-      MINIO_REGION: ${MINIO_REGION:-us-east-1}
-      OTEL_ENABLED: ${OTEL_ENABLED:-false}
-      OTEL_SERVICE_NAME: ${OTEL_SERVICE_NAME:-my-ads-api}
-      OTEL_EXPORTER_OTLP_ENDPOINT: ${OTEL_EXPORTER_OTLP_ENDPOINT:-http://otel-collector:4318}
-      OTEL_EXPORTER_OTLP_HEADERS: ${OTEL_EXPORTER_OTLP_HEADERS:-}
-      OTEL_LOG_LEVEL: ${OTEL_LOG_LEVEL:-error}
-      LOG_LEVEL: ${LOG_LEVEL:-info}
-      LOG_PRETTY: ${LOG_PRETTY:-false}
-      PRISMA_LOG_QUERIES: ${PRISMA_LOG_QUERIES:-false}
-      NEXT_UI_PORT: ${NEXT_UI_PORT:-6005}
-      NEXT_PUBLIC_APP_URL: ${NEXT_PUBLIC_APP_URL:-https://mahan.radiophp.observer}
-      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:-https://mahan.radiophp.observer/api}
+      MINIO_BUCKET: ${MINIO_BUCKET}
+      MINIO_REGION: ${MINIO_REGION}
+      OTEL_ENABLED: ${OTEL_ENABLED}
+      OTEL_SERVICE_NAME: ${OTEL_SERVICE_NAME}
+      OTEL_EXPORTER_OTLP_ENDPOINT: ${OTEL_EXPORTER_OTLP_ENDPOINT}
+      OTEL_EXPORTER_OTLP_HEADERS: ${OTEL_EXPORTER_OTLP_HEADERS}
+      OTEL_LOG_LEVEL: ${OTEL_LOG_LEVEL}
+      LOG_LEVEL: ${LOG_LEVEL}
+      LOG_PRETTY: ${LOG_PRETTY}
+      PRISMA_LOG_QUERIES: ${PRISMA_LOG_QUERIES}
+      NEXT_UI_PORT: ${NEXT_UI_PORT}
+      NEXT_PUBLIC_APP_URL: ${NEXT_PUBLIC_APP_URL}
+      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL}
     depends_on:
       - postgres
       - redis
@@ -227,19 +227,19 @@ services:
       - app_net
     deploy:
       <<: *deploy_defaults
-      replicas: ${API_CRON_REPLICAS:-1}
+      replicas: ${API_CRON_REPLICAS}
 
   tileserver:
     image: maptiler/tileserver-gl:v4.8.0
     command: ["--mbtiles", "/data/iran.mbtiles", "--port", "8080"]
     ports:
       - target: 8080
-        published: ${MAP_TILES_PORT:-8235}
+        published: ${MAP_TILES_PORT}
         protocol: tcp
         mode: ingress
     volumes:
       - type: bind
-        source: ${MAP_TILES_PATH:-/var/lib/my-ads/maps}
+        source: ${MAP_TILES_PATH}
         target: /data
         read_only: true
     networks:
@@ -257,14 +257,14 @@ services:
     volumes:
       - ./observability/otel-collector-config.yaml:/etc/otel-collector.yaml:ro
     ports:
-      - target: ${OTEL_COLLECTOR_HTTP_PORT:-6317}
-        published: ${OTEL_COLLECTOR_HTTP_PORT:-6317}
+      - target: ${OTEL_COLLECTOR_HTTP_PORT}
+        published: ${OTEL_COLLECTOR_HTTP_PORT}
         protocol: tcp
         mode: ingress
     environment:
-      OTEL_COLLECTOR_HTTP_PORT: ${OTEL_COLLECTOR_HTTP_PORT:-6317}
-      OTEL_COLLECTOR_GRPC_PORT: ${OTEL_COLLECTOR_GRPC_PORT:-6318}
-      TEMPO_GRPC_PORT: ${TEMPO_GRPC_PORT:-6321}
+      OTEL_COLLECTOR_HTTP_PORT: ${OTEL_COLLECTOR_HTTP_PORT}
+      OTEL_COLLECTOR_GRPC_PORT: ${OTEL_COLLECTOR_GRPC_PORT}
+      TEMPO_GRPC_PORT: ${TEMPO_GRPC_PORT}
     networks:
       - app_net
     deploy:
@@ -278,12 +278,12 @@ services:
       - ./observability/loki-config.yaml:/etc/loki/local-config.yaml:ro
       - loki_data:/var/loki
     ports:
-      - target: ${LOKI_PORT:-6319}
-        published: ${LOKI_PORT:-6319}
+      - target: ${LOKI_PORT}
+        published: ${LOKI_PORT}
         protocol: tcp
         mode: ingress
     environment:
-      LOKI_PORT: ${LOKI_PORT:-6319}
+      LOKI_PORT: ${LOKI_PORT}
     networks:
       - app_net
     deploy:
@@ -312,13 +312,13 @@ services:
       - ./observability/tempo.yaml:/etc/tempo.yaml:ro
       - tempo_data:/var/tempo
     ports:
-      - target: ${TEMPO_PORT:-6320}
-        published: ${TEMPO_PORT:-6320}
+      - target: ${TEMPO_PORT}
+        published: ${TEMPO_PORT}
         protocol: tcp
         mode: ingress
     environment:
-      TEMPO_PORT: ${TEMPO_PORT:-6320}
-      TEMPO_GRPC_PORT: ${TEMPO_GRPC_PORT:-6321}
+      TEMPO_PORT: ${TEMPO_PORT}
+      TEMPO_GRPC_PORT: ${TEMPO_GRPC_PORT}
     networks:
       - app_net
     deploy:
@@ -332,18 +332,18 @@ services:
       - '--storage.tsdb.path=/prometheus'
       - '--web.console.libraries=/usr/share/prometheus/console_libraries'
       - '--web.console.templates=/usr/share/prometheus/consoles'
-      - '--web.listen-address=:${PROMETHEUS_PORT:-6322}'
+      - '--web.listen-address=:${PROMETHEUS_PORT}'
     volumes:
       - ./observability/prometheus.yml:/etc/prometheus/prometheus.yml:ro
       - ./observability/prometheus-alerts.yml:/etc/prometheus/alerts/health-alerts.yml:ro
       - prometheus_data:/prometheus
     ports:
-      - target: ${PROMETHEUS_PORT:-6322}
-        published: ${PROMETHEUS_PORT:-6322}
+      - target: ${PROMETHEUS_PORT}
+        published: ${PROMETHEUS_PORT}
         protocol: tcp
         mode: ingress
     environment:
-      PROMETHEUS_PORT: ${PROMETHEUS_PORT:-6322}
+      PROMETHEUS_PORT: ${PROMETHEUS_PORT}
     networks:
       - app_net
     deploy:
@@ -356,7 +356,7 @@ services:
       GF_SECURITY_ADMIN_USER: admin
       GF_SECURITY_ADMIN_PASSWORD: admin
       GF_FEATURE_TOGGLES_ENABLE: traceqlEditor
-      GF_SERVER_HTTP_PORT: ${GRAFANA_PORT:-6323}
+      GF_SERVER_HTTP_PORT: ${GRAFANA_PORT}
       GF_PATHS_PROVISIONING: /etc/grafana/provisioning
     volumes:
       - grafana_data:/var/lib/grafana
@@ -367,8 +367,8 @@ services:
       - prometheus
       - tempo
     ports:
-      - target: ${GRAFANA_PORT:-6323}
-        published: ${GRAFANA_PORT:-6323}
+      - target: ${GRAFANA_PORT}
+        published: ${GRAFANA_PORT}
         protocol: tcp
         mode: ingress
     networks:
@@ -387,12 +387,12 @@ services:
     environment:
       NODE_ENV: production
       APP_HOST: 0.0.0.0
-      APP_PORT: ${APP_PORT:-6200}
-      DATABASE_URL: ${DATABASE_URL:-postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:${POSTGRES_INTERNAL_PORT:-5432}/${POSTGRES_DB:-my_ads}?schema=public}
-      DATABASE_DIRECT_URL: ${DATABASE_DIRECT_URL:-postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:${POSTGRES_INTERNAL_PORT:-5432}/${POSTGRES_DB:-my_ads}?schema=public}
-      REDIS_HOST: ${REDIS_HOST:-redis}
-      REDIS_PORT: ${REDIS_PORT:-6379}
-      RABBITMQ_URL: ${RABBITMQ_URL:-amqp://${RABBITMQ_USERNAME:-guest}:${RABBITMQ_PASSWORD:-guest}@rabbitmq:5672}
+      APP_PORT: ${APP_PORT}
+      DATABASE_URL: ${DATABASE_URL}
+      DATABASE_DIRECT_URL: ${DATABASE_DIRECT_URL}
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+      RABBITMQ_URL: ${RABBITMQ_URL}
       JWT_ACCESS_TOKEN_SECRET: ${JWT_ACCESS_TOKEN_SECRET:?JWT_ACCESS_TOKEN_SECRET not set}
       JWT_REFRESH_TOKEN_SECRET: ${JWT_REFRESH_TOKEN_SECRET:?JWT_REFRESH_TOKEN_SECRET not set}
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN:?TELEGRAM_BOT_TOKEN not set}
@@ -405,7 +405,7 @@ services:
       - app_net
     deploy:
       <<: *deploy_defaults
-      replicas: ${TELEGRAM_BOT_REPLICAS:-1}
+      replicas: ${TELEGRAM_BOT_REPLICAS}
       placement:
         constraints:
           - node.role == manager
@@ -414,23 +414,23 @@ services:
     image: ghcr.io/radiophp/my-ads-ui:latest
     environment:
       NODE_ENV: production
-      NEXT_UI_PORT: ${NEXT_UI_PORT:-6005}
-      PORT: ${NEXT_UI_PORT:-6005}
-      NEXT_PUBLIC_APP_URL: ${NEXT_PUBLIC_APP_URL:-https://mahanfile.com}
-      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:-https://mahanfile.com/api}
-      NEXT_PUBLIC_ANALYTICS_WRITE_KEY: ${NEXT_PUBLIC_ANALYTICS_WRITE_KEY:-}
+      NEXT_UI_PORT: ${NEXT_UI_PORT}
+      PORT: ${NEXT_UI_PORT}
+      NEXT_PUBLIC_APP_URL: ${NEXT_PUBLIC_APP_URL}
+      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL}
+      NEXT_PUBLIC_ANALYTICS_WRITE_KEY: ${NEXT_PUBLIC_ANALYTICS_WRITE_KEY}
     depends_on:
       - api
     ports:
-      - target: ${NEXT_UI_PORT:-6005}
-        published: ${NEXT_UI_PORT:-6005}
+      - target: ${NEXT_UI_PORT}
+        published: ${NEXT_UI_PORT}
         protocol: tcp
         mode: ingress
     networks:
       - app_net
     deploy:
       <<: *deploy_defaults
-      replicas: ${UI_REPLICAS:-2}
+      replicas: ${UI_REPLICAS}
       placement:
         constraints:
           - node.role == manager
