fix:deployment env vars

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -9,6 +9,55 @@ RUN apk add --no-cache openssl
 FROM node:22-alpine AS builder
 WORKDIR /app
 ENV NODE_ENV=development
+# Build-time args to satisfy tooling that expects envs present during build
+ARG DATABASE_URL=""
+ARG DATABASE_DIRECT_URL=""
+ARG REDIS_HOST=""
+ARG REDIS_PORT=""
+ARG REDIS_DB=""
+ARG REDIS_TLS=""
+ARG REDIS_KEY_PREFIX=""
+ARG RABBITMQ_URL=""
+ARG MINIO_ENDPOINT=""
+ARG MINIO_PORT=""
+ARG MINIO_CONSOLE_PORT=""
+ARG MINIO_USE_SSL=""
+ARG MINIO_ACCESS_KEY=""
+ARG MINIO_SECRET_KEY=""
+ARG MINIO_BUCKET=""
+ARG MINIO_REGION=""
+ARG OTEL_ENABLED=""
+ARG OTEL_EXPORTER_OTLP_ENDPOINT=""
+ARG OTEL_EXPORTER_OTLP_HEADERS=""
+ARG OTEL_SERVICE_NAME=""
+ARG OTEL_LOG_LEVEL=""
+ARG LOG_LEVEL=""
+ARG LOG_PRETTY=""
+ARG PRISMA_LOG_QUERIES=""
+ENV DATABASE_URL=${DATABASE_URL}
+ENV DATABASE_DIRECT_URL=${DATABASE_DIRECT_URL}
+ENV REDIS_HOST=${REDIS_HOST}
+ENV REDIS_PORT=${REDIS_PORT}
+ENV REDIS_DB=${REDIS_DB}
+ENV REDIS_TLS=${REDIS_TLS}
+ENV REDIS_KEY_PREFIX=${REDIS_KEY_PREFIX}
+ENV RABBITMQ_URL=${RABBITMQ_URL}
+ENV MINIO_ENDPOINT=${MINIO_ENDPOINT}
+ENV MINIO_PORT=${MINIO_PORT}
+ENV MINIO_CONSOLE_PORT=${MINIO_CONSOLE_PORT}
+ENV MINIO_USE_SSL=${MINIO_USE_SSL}
+ENV MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY}
+ENV MINIO_SECRET_KEY=${MINIO_SECRET_KEY}
+ENV MINIO_BUCKET=${MINIO_BUCKET}
+ENV MINIO_REGION=${MINIO_REGION}
+ENV OTEL_ENABLED=${OTEL_ENABLED}
+ENV OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
+ENV OTEL_EXPORTER_OTLP_HEADERS=${OTEL_EXPORTER_OTLP_HEADERS}
+ENV OTEL_SERVICE_NAME=${OTEL_SERVICE_NAME}
+ENV OTEL_LOG_LEVEL=${OTEL_LOG_LEVEL}
+ENV LOG_LEVEL=${LOG_LEVEL}
+ENV LOG_PRETTY=${LOG_PRETTY}
+ENV PRISMA_LOG_QUERIES=${PRISMA_LOG_QUERIES}
 COPY package.json package-lock.json* ./
 RUN npm install
 COPY . .
@@ -18,6 +67,54 @@ RUN npm run build
 FROM base AS production
 WORKDIR /app
 ENV NODE_ENV=production
+ARG DATABASE_URL=""
+ARG DATABASE_DIRECT_URL=""
+ARG REDIS_HOST=""
+ARG REDIS_PORT=""
+ARG REDIS_DB=""
+ARG REDIS_TLS=""
+ARG REDIS_KEY_PREFIX=""
+ARG RABBITMQ_URL=""
+ARG MINIO_ENDPOINT=""
+ARG MINIO_PORT=""
+ARG MINIO_CONSOLE_PORT=""
+ARG MINIO_USE_SSL=""
+ARG MINIO_ACCESS_KEY=""
+ARG MINIO_SECRET_KEY=""
+ARG MINIO_BUCKET=""
+ARG MINIO_REGION=""
+ARG OTEL_ENABLED=""
+ARG OTEL_EXPORTER_OTLP_ENDPOINT=""
+ARG OTEL_EXPORTER_OTLP_HEADERS=""
+ARG OTEL_SERVICE_NAME=""
+ARG OTEL_LOG_LEVEL=""
+ARG LOG_LEVEL=""
+ARG LOG_PRETTY=""
+ARG PRISMA_LOG_QUERIES=""
+ENV DATABASE_URL=${DATABASE_URL}
+ENV DATABASE_DIRECT_URL=${DATABASE_DIRECT_URL}
+ENV REDIS_HOST=${REDIS_HOST}
+ENV REDIS_PORT=${REDIS_PORT}
+ENV REDIS_DB=${REDIS_DB}
+ENV REDIS_TLS=${REDIS_TLS}
+ENV REDIS_KEY_PREFIX=${REDIS_KEY_PREFIX}
+ENV RABBITMQ_URL=${RABBITMQ_URL}
+ENV MINIO_ENDPOINT=${MINIO_ENDPOINT}
+ENV MINIO_PORT=${MINIO_PORT}
+ENV MINIO_CONSOLE_PORT=${MINIO_CONSOLE_PORT}
+ENV MINIO_USE_SSL=${MINIO_USE_SSL}
+ENV MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY}
+ENV MINIO_SECRET_KEY=${MINIO_SECRET_KEY}
+ENV MINIO_BUCKET=${MINIO_BUCKET}
+ENV MINIO_REGION=${MINIO_REGION}
+ENV OTEL_ENABLED=${OTEL_ENABLED}
+ENV OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
+ENV OTEL_EXPORTER_OTLP_HEADERS=${OTEL_EXPORTER_OTLP_HEADERS}
+ENV OTEL_SERVICE_NAME=${OTEL_SERVICE_NAME}
+ENV OTEL_LOG_LEVEL=${OTEL_LOG_LEVEL}
+ENV LOG_LEVEL=${LOG_LEVEL}
+ENV LOG_PRETTY=${LOG_PRETTY}
+ENV PRISMA_LOG_QUERIES=${PRISMA_LOG_QUERIES}
 COPY package.json package-lock.json* ./
 COPY --from=builder /app/node_modules ./node_modules
 RUN npm prune --omit=dev
