--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -9,17 +9,19 @@ RUN npm install --legacy-peer-deps
 FROM node:20-alpine AS builder
 WORKDIR /app
 ENV NODE_ENV=production
-ARG NEXT_PUBLIC_APP_URL
-ARG NEXT_PUBLIC_API_BASE_URL
-ARG NEXT_PUBLIC_WS_BASE_URL
-ARG NEXT_PUBLIC_MAP_TILE_BASE_URL
-ARG NEXT_PUBLIC_VAPID_PUBLIC_KEY
-# Make Next.js pick up runtime URLs at build time (falls back to .env defaults if args unset)
+ARG NEXT_PUBLIC_APP_URL=""
+ARG NEXT_PUBLIC_API_BASE_URL=""
+ARG NEXT_PUBLIC_WS_BASE_URL=""
+ARG NEXT_PUBLIC_MAP_TILE_BASE_URL=""
+ARG NEXT_PUBLIC_VAPID_PUBLIC_KEY=""
+ARG NEXT_PUBLIC_ANALYTICS_WRITE_KEY=""
+# Make Next.js pick up runtime URLs at build time (falls back to provided args)
 ENV NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL}
 ENV NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL}
 ENV NEXT_PUBLIC_WS_BASE_URL=${NEXT_PUBLIC_WS_BASE_URL}
 ENV NEXT_PUBLIC_MAP_TILE_BASE_URL=${NEXT_PUBLIC_MAP_TILE_BASE_URL}
 ENV NEXT_PUBLIC_VAPID_PUBLIC_KEY=${NEXT_PUBLIC_VAPID_PUBLIC_KEY}
+ENV NEXT_PUBLIC_ANALYTICS_WRITE_KEY=${NEXT_PUBLIC_ANALYTICS_WRITE_KEY}
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 RUN npm run build
@@ -35,6 +37,7 @@ ENV NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL}
 ENV NEXT_PUBLIC_WS_BASE_URL=${NEXT_PUBLIC_WS_BASE_URL}
 ENV NEXT_PUBLIC_MAP_TILE_BASE_URL=${NEXT_PUBLIC_MAP_TILE_BASE_URL}
 ENV NEXT_PUBLIC_VAPID_PUBLIC_KEY=${NEXT_PUBLIC_VAPID_PUBLIC_KEY}
+ENV NEXT_PUBLIC_ANALYTICS_WRITE_KEY=${NEXT_PUBLIC_ANALYTICS_WRITE_KEY}
 COPY --from=builder /app/public ./public
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/node_modules ./node_modules
