fix: try until fix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -299,6 +299,7 @@ jobs:
       - self-hosted
       - linux
       - x64
+    needs: publish-images
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
       contents: read
