--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -241,12 +241,11 @@ jobs:
       - name: Build project
         run: npm run build
 
-  publish-images:
-    if: ${{ true }} # re-enabled
+  publish-api-image:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs:
       - server-build
-      - ui-build
     permissions:
       contents: read
       packages: write
@@ -278,6 +277,32 @@ jobs:
             ghcr.io/${{ steps.vars.outputs.owner }}/my-ads-api:${{ github.sha }}
             ghcr.io/${{ steps.vars.outputs.owner }}/my-ads-api:latest
 
+  publish-ui-image:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    needs:
+      - ui-build
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Derive image namespace
+        id: vars
+        run: echo "owner=${GITHUB_REPOSITORY_OWNER,,}" >> "$GITHUB_OUTPUT"
+
       - name: Build and push UI image
         uses: docker/build-push-action@v6
         with:
@@ -299,7 +324,9 @@ jobs:
       - self-hosted
       - linux
       - x64
-    needs: publish-images
+    needs:
+      - publish-api-image
+      - publish-ui-image
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
       contents: read
