fix: add grafana security

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -347,8 +347,11 @@ jobs:
           JWT_REFRESH_TOKEN_SECRET: ${{ secrets.JWT_REFRESH_TOKEN_SECRET }}
           RABBITMQ_PASSWORD: ${{ secrets.RABBITMQ_PASSWORD }}
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          GRAFANA_ADMIN_PASSWORD: ${{ secrets.GRAFANA_ADMIN_PASSWORD }}
+          GRAFANA_ADMIN_USER: ${{ vars.GRAFANA_ADMIN_USER }}
+          GRAFANA_ADMIN_EMAIL: ${{ vars.GRAFANA_ADMIN_EMAIL }}
         run: |
-          required_vars=(STACK_NAME GHCR_TOKEN POSTGRES_PASSWORD MINIO_ACCESS_KEY MINIO_SECRET_KEY JWT_ACCESS_TOKEN_SECRET JWT_REFRESH_TOKEN_SECRET RABBITMQ_PASSWORD TELEGRAM_BOT_TOKEN)
+          required_vars=(STACK_NAME GHCR_TOKEN POSTGRES_PASSWORD MINIO_ACCESS_KEY MINIO_SECRET_KEY JWT_ACCESS_TOKEN_SECRET JWT_REFRESH_TOKEN_SECRET RABBITMQ_PASSWORD TELEGRAM_BOT_TOKEN GRAFANA_ADMIN_PASSWORD GRAFANA_ADMIN_USER GRAFANA_ADMIN_EMAIL)
           missing=0
           for name in "${required_vars[@]}"; do
             if [ -z "${!name}" ]; then
@@ -389,6 +392,9 @@ jobs:
           RABBITMQ_PASSWORD: ${{ secrets.RABBITMQ_PASSWORD }}
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_BOT_AUTOSTART: ${{ vars.TELEGRAM_BOT_AUTOSTART || 'false' }}
+          GRAFANA_ADMIN_PASSWORD: ${{ secrets.GRAFANA_ADMIN_PASSWORD }}
+          GRAFANA_ADMIN_USER: ${{ vars.GRAFANA_ADMIN_USER }}
+          GRAFANA_ADMIN_EMAIL: ${{ vars.GRAFANA_ADMIN_EMAIL }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           DATABASE_DIRECT_URL: ${{ secrets.DATABASE_DIRECT_URL || secrets.DATABASE_URL }}
           # Let compose defaults handle DIRECT_URL unless you need a separate endpoint
