--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -354,8 +354,9 @@ services:
   grafana:
     image: grafana/grafana:10.4.1
     environment:
-      GF_SECURITY_ADMIN_USER: admin
-      GF_SECURITY_ADMIN_PASSWORD: admin
+      GF_SECURITY_ADMIN_USER: ${GRAFANA_ADMIN_USER}
+      GF_SECURITY_ADMIN_EMAIL: ${GRAFANA_ADMIN_EMAIL}
+      GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_ADMIN_PASSWORD}
       GF_FEATURE_TOGGLES_ENABLE: traceqlEditor
       GF_SERVER_HTTP_PORT: ${GRAFANA_PORT}
       GF_PATHS_PROVISIONING: /etc/grafana/provisioning
