--- a/observability/prometheus.yml
+++ b/observability/prometheus.yml
@@ -11,9 +11,11 @@ scrape_configs:
     static_configs:
       - targets:
           - api:6200
+          - api:6300
 
   - job_name: 'tempo'
     metrics_path: /metrics
     static_configs:
       - targets:
           - tempo:6209
+          - tempo:6320
